--- a/modules/index.html
+++ b/modules/index.html
@@ -14,10 +14,8 @@
     </ul>
 
     <script type="module">
-      import Dog from './Dog.js';
+      // import
 
-      const frank = new Dog('Frank', 3);
-      const bart = new Dog('Bart');
     </script>
   </body>
 </html>
