--- a/classes/index.html
+++ b/classes/index.html
@@ -11,6 +11,7 @@
       <li><a href="/destructuring">Destructuring</a></li>
       <li><a href="/classes">Classes</a></li>
       <li><a href="/modules">Modules</a></li>
+      <li><a href="/proxies">Proxies</a></li>
     </ul>
 
     <script src="./Animal.js"></script>
