--- a/proxies/index.html
+++ b/proxies/index.html
@@ -2,11 +2,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>ES Modules</title>
+    <title>Proxies</title>
   </head>
   <body>
     <h1>New ES Features</h1>
-    <h2>Modules</h2>
+    <h2>Proxies</h2>
     <ul>
       <li><a href="/destructuring">Destructuring</a></li>
       <li><a href="/classes">Classes</a></li>
@@ -14,12 +14,6 @@
       <li><a href="/proxies">Proxies</a></li>
     </ul>
 
-    <script type="module">
-      import Dog from './Dog.js';
-      import {map, version} from './lodash.js';
-      
-      const frank = new Dog('Frank', 3);
-      const bart = new Dog('Bart');
-    </script>
+    <script src="./proxies.js"></script>
   </body>
 </html>
