--- a/destructuring/index.html
+++ b/destructuring/index.html
@@ -12,6 +12,7 @@
       <li><a href="/classes">Classes</a></li>
       <li><a href="/modules">Modules</a></li>
       <li><a href="/proxies">Proxies</a></li>
+      <li><a href="/async">Async/Await</a></li>
     </ul>
 
     <script src="./destructuring.js"></script>
