--- a/modules/index.html
+++ b/modules/index.html
@@ -12,12 +12,13 @@
       <li><a href="/classes">Classes</a></li>
       <li><a href="/modules">Modules</a></li>
       <li><a href="/proxies">Proxies</a></li>
+      <li><a href="/async">Async/Await</a></li>
     </ul>
 
     <script type="module">
       import Dog from './Dog.js';
       import {map, version} from './lodash.js';
-      
+
       const frank = new Dog('Frank', 3);
       const bart = new Dog('Bart');
     </script>
