--- a/modules/index.html
+++ b/modules/index.html
@@ -11,6 +11,8 @@
       <li><a href="/destructuring">Destructuring</a></li>
       <li><a href="/classes">Classes</a></li>
       <li><a href="/modules">Modules</a></li>
+      <li><a href="/proxies">Proxies</a></li>
+      <li><a href="/async">Async/Await</a></li>
     </ul>
 
     <script type="module">
