Fix async for working

--- a/async/index.html
+++ b/async/index.html
@@ -16,6 +16,6 @@
     </ul>
 
     <script src="./basic.js"></script>
-    <script src="./service.js"></script>
+    <!-- <script src="./service.js"></script> -->
   </body>
 </html>
