Fix index.html links

--- a/index.html
+++ b/index.html
@@ -5,36 +5,13 @@
     <title>ES Features</title>
   </head>
   <body>
-<<<<<<< Updated upstream
-    <!-- Destructuring -->
-    <!-- <script src="./destructuring.js"></script> -->
-
-
-    <!-- Classes -->
-    <!-- <script src="./Animal.js"></script> -->
-    <!-- <script src="./Dog.js"></script> -->
-
-    <!-- Modules -->
-    <script type="module">
-      import Dog from './Dog.js';
-      import {map, version} from './lodash.js';
-debugger;
-      var frank = new Dog('Frank', 3);
-      var bart = new Dog('Bart');
-
-<<<<<<< Updated upstream
-    </script>
-=======
-    </script> -->
-=======
     <h1>New ES Features</h1>
     <ul>
-      <li><a href="destructuring.html">Destructuring</a></li>
+      <li><a href="/destructuring">Destructuring</a></li>
       <li><a href="/classes">Classes</a></li>
       <li><a href="/modules">Modules</a></li>
+      <li><a href="/proxies">Proxies</a></li>
+      <li><a href="/async">Async/Await</a></li>
     </ul>
-
->>>>>>> Stashed changes
->>>>>>> Stashed changes
   </body>
 </html>
